--- a/LandingPagePMN.html
+++ b/LandingPagePMN.html
@@ -20,7 +20,7 @@
         .image-gauche {
             margin-left: 60px; 
             margin-right: 50px; 
-            width: 200px;
+            width: 250px;
             height: auto;
         }
         .liens-droite a {
@@ -34,6 +34,7 @@
             display: flex;
             flex-direction: column; 
             width: 110px;
+            margin-top: 20px;
 
 
         }
