--- a/LandingPagePMN.html
+++ b/LandingPagePMN.html
@@ -29,12 +29,15 @@
             margin-left: auto; 
             margin-right: 20px;
             align-items: center;
+            font-size: 20px;
         }
         .boutons-droite {
             display: flex;
             flex-direction: column; 
-            width: 110px;
+            width: 150px;
             margin-top: 20px;
+            height: 30px;
+            text-align: center;
 
 
         }
@@ -59,7 +62,7 @@
             <a href="#">Evenements</a>
             <a href="#">Contact</a>
         </div>
-        <div class="boutons-container"> <!-- Nouvelle div contenant les boutons -->
+        <div class="boutons-container"> 
             <button class="boutons-droite">CANDIDATURE</button>
             <button class="boutons-droite">ENTREPRISE</button>
         </div>
